# LCDSpicer2

./: AUTHORS  COPYRIGHT  INSTALL  Makefile.am  README  autogen.sh  configure.ac
doc/: Makefile.am  lcdspicer2.doxyfile.in
examples/: LCDSpicer2.conf  example.lcdspicer.xml
examples/Plugins/Output/: ExampleOutputPlugin.cpp  ExampleOutputPlugin.hpp
src/: Makefile.am
src/LCDSpicer2/: Configuration.cpp  Configuration.hpp  DataLoader.cpp  DataLoader.hpp  InputPluginHandler.cpp  InputPluginHandler.hpp  InputPluginManifest.cpp  InputPluginManifest.hpp  Main.cpp  Main.hpp  Makefile.am  OutputPluginHandler.cpp  OutputPluginHandler.hpp  PluginHandler.cpp  PluginHandler.hpp  PluginManifest.hpp  Request.cpp  Request.hpp  XMLHelper.cpp  XMLHelper.hpp
src/Libs/: Definitions.hpp  Error.cpp  Error.hpp  GenericFunctions.cpp  GenericFunctions.hpp  Logger.cpp  Logger.hpp  Makefile.am  Plugin.cpp  Plugin.hpp  Refresh.cpp  Refresh.hpp  Socks.cpp  Socks.hpp
src/Libs/InputPlugin/: InputDefinitions.hpp  InputPlugin.cpp  InputPlugin.hpp  Makefile.am
src/Libs/OutputPlugin/: BarWidget.cpp  BarWidget.hpp  ClockWidget.cpp  ClockWidget.hpp  Makefile.am  OutputDefinitions.hpp  OutputPlugin.cpp  OutputPlugin.hpp  Screen.cpp  Screen.hpp  TextWidget.cpp  TextWidget.hpp  Widget.cpp  Widget.hpp
src/Libs/Types/: Alignment.cpp  Alignment.hpp  Backlight.cpp  Backlight.hpp  Color.cpp  Color.hpp  Dimension.cpp  Dimension.hpp  Direction.cpp  Direction.hpp  Makefile.am  Position.cpp  Position.hpp  Rotation.cpp  Rotation.hpp  Speed.cpp  Speed.hpp  Value.cpp  Value.hpp
src/Libs/Units/: DigitalInformation.cpp  DigitalInformation.hpp  Hertz.cpp  Hertz.hpp  LinearUnits.cpp  LinearUnits.hpp  Makefile.am  Unit.cpp  Unit.hpp
src/Plugins/: Makefile.am
src/Plugins/Input/: Makefile.am
src/Plugins/Input/Calendar/: Calendar.cpp  Calendar.hpp  Makefile.am  PluginManifest.xml
src/Plugins/Input/Kernel/: Kernel.cpp  Kernel.hpp  Makefile.am  PluginManifest.xml
src/Plugins/Input/Users/: Makefile.am  PluginManifest.xml  Users.cpp  Users.hpp
src/Plugins/Input/nvidia/: PluginManifest.xml
src/Plugins/Output/: Makefile.am
src/Plugins/Output/LCDProc/: LCDProc.cpp  LCDProc.hpp  LCDProcBarWidget.cpp  LCDProcBarWidget.hpp  LCDProcClockWidget.cpp  LCDProcClockWidget.hpp  LCDProcScreen.cpp  LCDProcScreen.hpp  LCDProcTextWidget.cpp  LCDProcTextWidget.hpp  LCDProcWidget.cpp  LCDProcWidget.hpp  Makefile.am  PluginManifest.xml
src/Plugins/Output/LogDumper/: LogDumper.cpp  LogDumper.hpp  LogDumperScreen.cpp  LogDumperScreen.hpp  LogDumperWidget.cpp  LogDumperWidget.hpp  Makefile.am
