#Output types.
shared_LTLIBRARIES =	\
	libtypes.la			\
	libvalue.la

# Library used by output plugins to create new LCDSpicer2 output plugins.
libtypes_la_SOURCES =	\
	Alignment.hpp		\
	Alignment.cpp		\
	Backlight.hpp		\
	Backlight.cpp		\
	Color.hpp			\
	Color.cpp			\
	Dimension.hpp		\
	Dimension.cpp		\
	Direction.hpp		\
	Direction.cpp		\
	Position.hpp		\
	Position.cpp		\
	Rotation.hpp		\
	Rotation.cpp		\
	Speed.hpp			\
	Speed.cpp

libvalue_la_SOURCES =	\
	Value.hpp			\
	Value.cpp

pkginclude_HEADERS =	\
	Alignment.hpp		\
	Backlight.hpp		\
	Color.hpp			\
	Dimension.hpp		\
	Direction.hpp		\
	Position.hpp		\
	Rotation.hpp		\
	Speed.hpp			\
	Value.hpp

shareddir = $(libdir)/$(PACKAGE_TARNAME)