#Units library.
shared_LTLIBRARIES =				\
	libunits.la

libunits_la_SOURCES =				\
	Unit.hpp						\
	Unit.cpp						\
	LinearUnits.hpp					\
	LinearUnits.cpp					\
	DigitalInformation.hpp			\
	DigitalInformation.cpp			\
	Hertz.hpp						\
	Hertz.cpp

libunits_la_CXXFLAGS =				\
	-I..

shareddir = $(libdir)/$(PACKAGE_TARNAME)